api: Implement csv backed bookmarks WIP